# object-oriented-programming-coursework

./: CMakeLists.txt
src/: main.cpp
src/classes/: Board.cpp  Board.h  Entity.cpp  Entity.h  GameInitializer.cpp  GameInitializer.h  GameManager.cpp  GameManager.h  GameSettings.cpp  GameSettings.h  GameWatcher.cpp  GameWatcher.h  Gameplay.cpp  Gameplay.h  MoveProcessor.cpp  MoveProcessor.h  Object.cpp  Object.h  Player.cpp  Player.h
